Bug/warning squashing and fixed event page routes

--- a/react-node-capstone/client/src/components/EventsPage/RequestEvent.css
+++ b/react-node-capstone/client/src/components/EventsPage/RequestEvent.css
@@ -25,5 +25,5 @@
 
 .submit {
     margin-top: 2em !important;
-    float: right;
+    float: left;
 }
